# Project1

./: README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: project1.dune-package  project1.install  project1.opam
_build/default/.dune/: configurator.v2
_build/default/test/.merlin-conf/: exe-test_project1
_build/default/test/.test_project1.eobjs/byte/: dune__exe__Test_project1.cmi
project1/: dune-project
project1/_build/: .db  .digest-db  log
project1/_build/default/: project1.dune-package  project1.install  project1.opam
project1/_build/default/.dune/: configurator
project1/_build/default/lib/: project1.cma  project1.cmxs
project1/_build/default/lib/.merlin-conf/: lib-project1
project1/_build/default/lib/.project1.objs/byte/: project1.cmo  project1.cmt
project1/_build/default/test/.merlin-conf/: exe-test_project1
project1/_build/default/test/.test_project1.eobjs/byte/: dune__exe__Test_project1.cmti
project1/_build/default/test/.test_project1.eobjs/native/: dune__exe__Test_project1.cmx
project1/_build/install/default/lib/project1/: META  dune-package  opam
project1/lib/: dune
